2011-09-11	Alexander Hansen  <alexkhansen@users.sourceforge.net>

* VERSION: Bumped package manager version to 0.31.1, a new release

2011-08-27  Peter O'Gorman  <peter@pogma.com>

	* bootstrap: Allow 32 bit systems to bootstrap on 10.6.

2011-07-20  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.31.0, a new release

2011-07-20  Dave Morrison  <drm@finkproject.org>

	* REVISION: include 10.7, exclude 10.4

2011-07-11  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: require pre-installation of java on 10.7

2011-06-11  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: wrong kernel version in previous commit

2011-06-11  Daniel Macks  <dmacks@netspace.org>

	* bootstrap: 10.7 only supports x86_64

2011-04-30  Daniel Macks  <dmacks@netspace.org>

	* VERSION: Make fink HEAD always >> 0.30.x, since that has now
        branched.

2011-04-28  Daniel Macks  <dmacks@netspace.org>

	* bootstrap, setup: Assuming next version will have next version

2011-04-09  Daniel Macks  <dmacks@netspace.org>

	* fink.conf.in: No longer use /crypto subtrees.

2011-04-09  Daniel Macks  <dmacks@netspace.org>

	* Makefile: Need to use perlmod/ relative to Makefile not relative
	to original shell from which recipe was eventually invoked

2011-01-15  Dave Morrison  <drm@finkproject.org>

	* all: update copyright

2010-11-11  Dave Morrison  <drm@finkproject.org>

	* fink-x86_64.info.in: sync with recent changes to fink.info.in

2010-09-25  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Move "-w" to output-format section; clarify that -m
	invokes TestDepends

2010-08-09  Daniel Macks  <dmacks@netspace.org>

	* fink.info.in: Make "Description" pass validator

2010-07-04  Dave Morrison  <drm@finkproject.org>

	* postinstall.pl.in: Fink::Bootstrap::add_injected_to_trees now
	takes $distribution as an argument
	* bootstrap: now calls Fink::Config::fink_tree_default

2010-07-02  Dave Morrison  <drm@finkproject.org>
